--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,166 @@
+appdirs==1.4.3
+apturl==0.5.2
+astroid==2.3.3
+attrs==21.4.0
+aws-wsgi==0.2.7
+awsgi==0.0.5
+bcrypt==3.1.7
+beautifulsoup4==4.10.0
 black==22.3.0
+blinker==1.4
 boto3==1.24.13
+boto3-stubs==1.24.46
 botocore==1.27.13
+botocore-stubs==1.27.46
+Brlapi==0.7.0
 cachetools==5.2.0
 certifi==2022.6.15
+chardet==3.0.4
 charset-normalizer==2.0.12
+chrome-gnome-shell==0.0.0
 click==8.1.3
+colorama==0.4.3
+command-not-found==0.3
+crcmod==1.7
+cryptography==2.8
+cupshelpers==1.0
+cycler==0.11.0
+dbus-python==1.2.16
+defer==1.0.6
+distlib==0.3.0
+distro==1.4.0
+distro-info===0.23ubuntu1
+duplicity==0.8.12.0
+entrypoints==0.3
+fasteners==0.14.1
+filelock==3.0.12
+flake8==5.0.4
+Flask==2.0.2
+fonttools==4.32.0
+future==0.18.2
 fuzzywuzzy==0.18.0
 google-api-core==2.8.2
 google-api-python-client==2.51.0
+google-api-python-client-stubs==1.11.0
 google-auth==2.8.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.2
 googleapis-common-protos==1.56.2
 googlemaps==4.6.0
+greenlet==0.4.15
 httplib2==0.20.4
+httptools==0.3.0
 idna==3.3
+importlib-metadata==1.5.0
+instagram-scraper==1.10.6
+isort==4.3.4
+itsdangerous==2.0.1
+Jinja2==3.0.3
 jmespath==1.0.1
+keyring==18.0.1
+keyrings.alt==3.4.0
+kiwisolver==1.4.2
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lazy-object-proxy==1.4.3
+lockfile==0.12.2
+logilab-common==1.4.3
+louis==3.12.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+mccabe==0.7.0
+mininet==2.3.0.dev6
+monotonic==1.5
+more-itertools==4.2.0
+msgpack==0.6.2
 mypy==0.961
+mypy-boto3-cloudformation==1.24.36.post1
+mypy-boto3-dynamodb==1.24.36.post1
+mypy-boto3-ec2==1.24.46
+mypy-boto3-lambda==1.24.40
+mypy-boto3-rds==1.24.38
+mypy-boto3-s3==1.24.36.post1
+mypy-boto3-sqs==1.24.40
 mypy-extensions==0.4.3
+netifaces==0.10.4
+numpy==1.22.3
 oauthlib==3.2.0
+ovs==2.13.5
+packaging==21.3
+paramiko==2.6.0
 pathspec==0.9.0
+pexpect==4.6.0
 Pillow==9.1.1
 platformdirs==2.5.2
 protobuf==4.21.1
+py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycairo==1.16.2
+pycodestyle==2.9.1
+pycrypto==2.6.1
+pycups==1.9.73
 pyfiglet==0.8.post1
+pyflakes==2.5.0
+Pygments==2.3.1
+PyGObject==3.36.0
+PyJWT==1.7.1
+pylint==2.4.4
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pynvim==0.4.1
 pyparsing==3.0.9
 pyperclip==1.8.2
+pyRFC3339==1.1
+PySocks==1.6.8
+python-apt==2.0.0+ubuntu0.20.4.6
 python-dateutil==2.8.2
+python-debian===0.1.36ubuntu1
 python-Levenshtein==0.12.2
+pytz==2019.3
+pyxdg==0.26
 PyYAML==6.0
 requests==2.28.0
 requests-oauthlib==1.3.1
+requests-unixsocket==0.2.0
 rsa==4.8
 s3transfer==0.6.0
+scour==0.37
+SecretStorage==2.3.1
+simplejson==3.16.0
 six==1.16.0
+sortedcontainers==2.1.0
+soupsieve==2.3.1
+ssh-import-id==5.10
+system-service==0.3
+systemd-python==234
 tomli==2.0.1
+tqdm==4.62.3
+types-awscrt==0.13.14
+types-Pillow==9.2.1
+types-PyYAML==6.0.11
+types-requests==2.28.8
+types-s3transfer==0.6.0.post4
+types-urllib3==1.26.22
 typing-extensions==4.2.0
+ubuntu-advantage-tools==27.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
 uritemplate==4.1.1
 urllib3==1.26.9
+usb-creator==0.3.7
+uvloop==0.16.0
+vboxapi==1.0
+virtualenv==20.0.17
+vsco-scraper==0.53
+wadllib==1.3.3
+websockets==10.1
+Werkzeug==2.0.2
+wrapt==1.11.2
+xkit==0.0.0
+zipp==1.0.0
